--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-jest": "^27.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
+    "node-mocks-http": "^1.10.1",
     "react-test-renderer": "^17.0.2"
   }
 }
